--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-css": "tailwindcss build styles/globals.css -o styles/styles.css"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
     "next": "12.1.2",
+    "postcss": "^8.4.12",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
   }
 }
